# aws-clutter

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  app.py  pyproject.toml
aws_clutter/: cli.py
aws_clutter/clutter/: __init__.py  debs.py  ulbs.py
aws_clutter/data/: ebs_pricing.json  elb_pricing.json
aws_clutter_meter/: cli.py  tools.py
aws_clutter_meter/data/: ebs_pricing.json
terraform/: .terraform.lock.hcl  README.md  main.tf  variables.tf
terraform-test/: .terraform.lock.hcl  ck_metrics.tf  debs.tf
test-envs/debs/: README.md  aws.tf
test-envs/terraform1/: Makefile  ebs.tf
test-envs/ulbs/: .terraform.lock.hcl  lb.tf
tests/: test_debs.py
