[tool.poetry]
name = "aws-clutter-meter"
version = "0.8.21"
description = ""
authors = ["Shinichi Urano <s@urano.me>"]

[tool.poetry.dependencies]
python = ">=3.7.10 <4"
boto3 = "^1.19.4"
pendulum = "^2.1.2"
importlib-resources = "^5.3.0"
click = "^8.0.3"
importlib-metadata = "^4.8.1"

[tool.poetry.scripts]
debs = "aws_clutter_meter.cli:cli"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
