[tool.poetry]
name = "aws-clutter"
version = "0.9.1"
description = ""
authors = ["Shinichi Urano <s@urano.me>"]

[tool.poetry.dependencies]
python = ">=3.7.10 <4"
boto3 = "^1.19.4"
pendulum = "^2.1.2"
importlib-resources = "^5.3.0"
click = "^8.0.3"
importlib-metadata = "^4.8.1"

[tool.poetry.scripts]
awsclutter = "aws_clutter.cli:cli"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
